--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         steps:
             # Checkout the code
             - name: Checkout code
-              uses: actions/checkout@
+              uses: actions/checkout@v3
 
             # Setup Node.js
             - name: Set up Node.js
