--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
             - name: Run Linter
               run: |
                 chmod +x ./node_modules/.bin/eslint
-                npx eslint . --ext .js
-
+                npx eslint "**/*.js"
+                
             # Run the tests
             - name: Run tests
               run: npm test
